refactor: Removing explicit ResponseEntity type declarations, new Long(long) usage